nodejs/eks/examples/upgrade-cluster/update-existing-nodegroup/echoserver-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v2-svc
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: echoserver-v2

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoserver-v2
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: echoserver-v2
    spec:
      containers:
      - name: echoserver
        image: gcr.io/google-containers/echoserver:1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver-v2
  annotations:
    kubernetes.io/ingress.class: nginx-v2
spec:
  rules:
  - host: app.pulumi.com
    http:
      paths:
      - path: "/echoserver"
        backend:
          serviceName: echoserver-v2-svc
          servicePort: 80
